# gl_vk_simple_interop

./: .gitignore  CMakeLists.txt  README.md  compute.hpp  gl_vk.hpp  gl_vkpp.hpp  main.cpp
shaders/: shader.comp  shader.comp.glsl
